- add controller - add refactoring

--- a/DB/docker-compose.yml
+++ b/DB/docker-compose.yml
@@ -14,10 +14,9 @@ services:
       - .env
     depends_on:
       - db3
-
   db3:
     build:
-      context: .
+      context: ../deployments
       dockerfile: Dockerfile
     env_file:
       - .env
